# rust386

./: Cargo.toml  LICENSE.txt  README.md  notes.txt
bios/: bios  bios.c  bios.s  build.txt  mybios  mybios.s  types.h  x86.h
src/: bus.rs  cache.rs  cga.rs  clock.rs  cpu.rs  disk.rs  display.rs  instr.rs  iobus.rs  iter.rs  main.rs  num.rs  opcodes.rs  ram.rs  reg.rs  rom.rs
