[package]
name = "rust386"
version = "0.1.0"
authors = ["Stephan Williams <stephanwilliams.93@gmail.com>"]

[dependencies]
log = "0.3.6"
env_logger = "0.3.2"
enum_primitive = { rev = "77396ab", git = "https://github.com/tcr/enum_primitive-rs.git"}
num = "0.1.31"
bitflags = "0.5.0"
byteorder = "0.5.1"

piston_window = "0.42.0"
